# Roosha

./: .gitignore  README.md  pom.xml
Client/: .gitignore  CMakeLists.txt  README.md  Roosha-Client.pro  main.cpp
Client/Core/: QLSeq.cpp  QLSeq.h  Scrutiny.cpp  Scrutiny.h  card.cpp  card.h  cardbuilder.cpp  cardbuilder.h  centralcontroller.cpp  centralcontroller.h  changes.cpp  changes.h  dbcard.cpp  dbcard.h  hotkeylistener.cpp  hotkeylistener.h  ichange.cpp  ichange.h  translation.cpp  translation.h  world.cpp  world.h
Client/DB/: dbmanager.cpp  dbmanager.h
Client/GUI/: QmlWidget.cpp  QmlWidget.h  authentication_controller.cpp  authentication_controller.h  cardcreationcontroller.cpp  cardcreationcontroller.h  cardeditioncontroller.cpp  cardeditioncontroller.h  cardlistcontroller.cpp  cardlistcontroller.h  guimanager.cpp  guimanager.h  system_tray.cpp  system_tray.h  translationcontroller.cpp  translationcontroller.h
Client/GUI/Learning/: CardDifficulty.cpp  CardDifficulty.h  CardLearningModel.cpp  CardLearningModel.h  CardLearningViewModels.cpp  CardLearningViewModels.h  LearningManager.cpp  LearningManager.h  LearningStrategy.cpp  LearningStrategy.h  LearningWindowController.cpp  LearningWindowController.h  UserInputModels.cpp  UserInputModels.h
Client/Helpers/: StateHolder.cpp  StateHolder.h  bootstrap.cpp  bootstrap.h  configuremanager.cpp  configuremanager.h  protobuf_converter.cpp  protobuf_converter.h  qmlconvertation.cpp  qmlconvertation.h
Client/Img/: img.qrc
Client/Network/: async_client_call.h  authentication_manager.cpp  authentication_manager.h  error_status.h  network_manager.cpp  network_manager.h  networkmanager.cpp  preferences.h  roosha_service.cpp  roosha_service.h  roosha_service_connector.cpp  roosha_service_connector.h  server_response.cpp  server_response.h  synchronizer.cpp  synchronizer.h  translation_service.cpp  translation_service.h
Client/Network/Proto/: changes.pb.cc  changes.pb.h  commons.pb.cc  commons.pb.h  learning.pb.cc  learning.pb.h  roosha_service.grpc.pb.cc  roosha_service.grpc.pb.h  roosha_service.pb.cc  roosha_service.pb.h  translation_service.grpc.pb.cc  translation_service.pb.h
Client/QML/: CLView.qml  CardLearningView.qml  CardList.qml  EditView.qml  LearningWindow.qml  ShowEdition.qml  ShowTranslation.qml  TranslationView.qml  TranslationView_copy.qml  loginView.qml  qml.qrc  registerView.qml
Client/QML/learning/: CardViewBase.qml  LearningWindow.qml  UserInputBase.qml  ViewportElement.qml
Client/QML/learning/inputs/: TextInputStatus.qml  TextInputView.qml
Client/QML/learning/views/: DefaultCardView.qml  TargetsAndExampleView.qml
Client/Test/: runTests.cpp
Client/Test/Core/: TestLSequence.cpp  TestLSequence.h
Client/Test/Core/authTests/: testNet.cpp  testNet.h  worldtest.cpp  worldtest.h
Client/Test/Core/changes/: builderandchangestest.cpp  builderandchangestest.h  worldtest.cpp  worldtest.h
Client/Test/Network/: translations_test_slot_holder.cpp  translations_test_slot_holder.h
Client/lib/QHotkey/: CMakeLists.txt
Proto/: Makefile  changes.proto  commons.proto  roosha_service.proto  translation_service.proto
Roosha-Client/: README.md  Roosha-Client.pro  main.cpp
Roosha-Client/Core/: applicationdaemon.cpp  applicationdaemon.h  card.cpp  card.h  cardbuilder.cpp  cardbuilder.h  centralcontroller.cpp  centralcontroller.h  changes.cpp  changes.h  dbcard.cpp  dbcard.h  hotkeylistener.cpp  hotkeylistener.h  ichange.h  idiff.cpp  idiff.h  translation.cpp  translation.h
Roosha-Client/GUI/: guimanager.cpp  guimanager.h  translationcontroller.cpp  translationcontroller.h
Roosha-Client/Helpers/: bootstrap.cpp  bootstrap.h  qmlconvertation.h
Roosha-Client/Network/: async_client_call.h  network_manager.cpp  network_manager.h  networkmanager.cpp  networkmanager.h  proto_classes_registration.h  translation_service.cpp  translation_service.h
Roosha-Client/Network/Proto/: ProtoMakefile  commons.pb.cc  commons.pb.h  commons.proto  register_metatypes.py  translation_service.grpc.pb.cc  translation_service.grpc.pb.h  translation_service.pb.cc  translation_service.pb.h  translation_service.proto
Roosha-Client/QML/: ShowTranslation.qml  TranslationView.qml  qml.qrc
Roosha-Client/Test/Network/: translations_test_slot_holder.cpp
Server/: .gitignore  README.md  pom.xml
Server/redis/: Vagrantfile  init.sh  redis.conf
Server/src/main/java/com/github/roosha/server/: ErrorsStatusExceptions.java  InsecureRooshaServer.java  Main.java  RooshaRpcService.java  RooshaServerImpl.java  SynchronizationInterceptor.java
Server/src/main/proto/: changes.proto  commons.proto  learning.proto  roosha_service.proto
Server/src/main/resources/security/: ca.key  create.sh  server.csr  server.key
Server/src/test/java/com/github/roosha/translation/: RooshaServerAuthorizationTest.java
TranslationService/: .gitignore  pom.xml
TranslationService/src/main/java/com/github/roosha/server/: ErrorsStatusExceptions.java  Main.java  RooshaServer.java  RooshaServerImpl.java  RooshaService.java
TranslationService/src/main/java/com/github/roosha/translation/: RooshaTranslationServer.java  TranslationServer.java
TranslationService/src/main/resources/security/: ca.crt  server.crt  server.pkcs8.key
TranslationService/src/test/java/com/github/roosha/translation/: RooshaServerAuthorizationTest.java  RooshaServerTest.java  RooshaTranslationServerTest.java
build-Roosha-Client-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile  Roosha-Client  moc_centralcontroller.cpp  moc_hotkeylistener.cpp  moc_translation_service.cpp  moc_translations_test_slot_holder.cpp  qrc_qml.cpp
src/main/java/com/github/roosha/proto/translation/: RooshaTranslationService.java
src/main/java/com/github/roosha/translation/: Main.java  RooshaTranslationServer.java
src/main/java/com/github/roosha/translation/proto/: RooshaTranslationService.java
src/main/java/com/github/roosha/translation/providers/: RawTranslation.java  (+1 more)
src/main/proto/: translation_service.proto
src/test/java/com/github/roosha/translation/: RooshaTranslationServerTest.java
(+36 files in other folders)
